cmake_minimum_required(VERSION 3.10)
project(CUDA_TEST LANGUAGES CUDA CXX)
#include_directories(/home/tgx/cuda-learning/include /home/tgx/Downloads/anaconda/yes/envs/cuda/lib/python3.10/site-packages/torch/include /home/tgx/Downloads/anaconda/yes/envs/cuda/lib/python3.10/site-packages/torch/include/torch/csrc/api/include/)
#link_directories(/home/tgx/Downloads/anaconda/yes/lib)
#include(CheckLanguage)
#check_language(CUDA)
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
set(CMAKE_CUDA_FLAGS ${CMAKE_CUDA_FLAGS} "-g -G -O0")  # enable cuda-gdb
set(Torch_DIR "/home/tgx/Downloads/anaconda/yes/envs/cuda/lib/python3.10/site-packages/torch/share/cmake/Torch")
find_package(Torch REQUIRED)
add_executable(flash_attn flash_attn.cu)
target_link_libraries(flash_attn "${TORCH_LIBRARIES}")
set_property(TARGET flash_attn PROPERTY CXX_STANDARD 17)